--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,11 @@ body {
 }
 
 .navbar {
-    margin-bottom: 50px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    /* margin-bottom: 30px; */
 }
 
 #mapid {
@@ -28,7 +32,10 @@ body {
 }
 
 .footer {
-    margin-bottom: -20px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #343a40;
     color: white;
     padding-bottom: 10px;
@@ -51,11 +58,14 @@ h3 {
     grid-template-columns: auto auto;
     grid-row-gap: 20px;
     grid-column-gap: 25px;
+    margin-top: 100px;
     padding: 10px;
+    margin-bottom: 50px;
 }
 
-.grid-container>div {
+
+/* .grid-container>div {
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
-}
+} */
