--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,12 @@ body {
     left: 0;
     right: 0;
     top: 0;
+    z-index: 1;
     /* margin-bottom: 30px; */
 }
 
 #mapid {
+    z-index: -1;
     width: 750px;
     height: 500px;
 }
